--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,13 +5,13 @@ spring:
     name: hmdp
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/hmdp?useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://127.0.0.1:3306/demo?useSSL=false&serverTimezone=UTC
     username: root
-    password: ???
+    password: root
   redis:
     host: 192.168.150.101
     port: 6379
-    password: ???
+    password: 123456
     lettuce:
       pool:
         max-active: 10
