--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ spring:
     name: hmdp
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/demo?useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://127.0.0.1:3306/demo?useSSL=false&&allowPublicKeyRetrieval=true&serverTimezone=UTC
     username: root
     password: root
   redis:
