--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,16 @@
             <version>5.8.8</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjrt</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.9.19</version> <!-- 使用适合你项目的版本 -->
+        </dependency>
+
     </dependencies>
 
     <build>
