--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
             <artifactId>aspectjweaver</artifactId>
             <version>1.9.19</version> <!-- 使用适合你项目的版本 -->
         </dependency>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.27.2</version>
+        </dependency>
 
     </dependencies>
 
