--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,3 +26,41 @@ services:
       - ./redis/config/redis.conf:/usr/local/etc/redis/redis.conf  # 配置文件
       - ./redis/logs:/logs                   # 日志目录
     command: redis-server /usr/local/etc/redis/redis.conf
+
+
+  rocketmq-namesrv:
+      image: apache/rocketmq:5.1.4
+      container_name: rocketmq-namesrv
+      ports:
+        - 9876:9876
+      volumes:
+        - ./rocketmq/data/namesrv/logs:/home/rocketmq/logs
+      command: sh mqnamesrv
+      environment:
+        - JAVA_OPT_EXT=-server -Xms256m -Xmx256m -Xmn128m
+      networks:
+        - rocketmq-network
+
+  rocketmq-broker:
+        image: apache/rocketmq:5.1.4
+        container_name: rocketmq-broker
+        ports:
+          - 10909:10909
+          - 10911:10911
+          - 10912:10912
+        volumes:
+          - ./rocketmq/data/broker/logs:/home/rocketmq/logs
+          - ./rocketmq/data/broker/store:/home/rocketmq/store
+          - ./rocketmq/conf/broker.conf:/home/rocketmq/conf/broker.conf
+        environment:
+          - JAVA_OPT_EXT=-server -Xms256m -Xmx256m -Xmn128m
+          - NAMESRV_ADDR=rocketmq-namesrv:9876
+        command: sh mqbroker -c /home/rocketmq/conf/broker.conf
+        depends_on:
+          - rocketmq-namesrv
+        networks:
+          - rocketmq-network
+
+networks:
+  rocketmq-network:
+    driver: bridge
